--- a/main.ipynb
+++ b/main.ipynb
@@ -5,6 +5,20 @@
    "id": "15479de4",
    "metadata": {},
    "source": [
+    "## データ読み込み"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce878d73",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
     "## "
    ]
   }
