add : 軌跡のリサンプリング

--- a/0527.ipynb
+++ b/0527.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "c5c6df30",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "8ff74088",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,8 @@
     "import japanize_matplotlib\n",
     "import numpy as np\n",
     "from scipy import signal\n",
-    "from scipy.signal import find_peaks"
+    "from scipy.signal import find_peaks\n",
+    "from scipy.interpolate import interp1d"
    ]
   },
   {
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "id": "12d10d63",
    "metadata": {},
    "outputs": [],
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "id": "0bed6dff",
    "metadata": {},
    "outputs": [],
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "id": "a1a19b5d",
    "metadata": {},
    "outputs": [
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "25331d40",
    "metadata": {},
    "outputs": [],
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "1027f53c",
    "metadata": {},
    "outputs": [
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "id": "3d60fcaa",
    "metadata": {},
    "outputs": [],
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "id": "1c1b1ffd",
    "metadata": {},
    "outputs": [
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "f2d15c6d",
    "metadata": {},
    "outputs": [
@@ -366,22 +367,33 @@
     "# 軌跡を描く\n",
     "step = 0.4\n",
     "point = [[0, 0]]\n",
-    "\t\t\t\n",
-    "for p in peek:\n",
-    "    x = step * np.sin(df_gyro['low_angle'][p]*1) + point[-1][0]\n",
-    "    y = step * np.cos(df_gyro['low_angle'][p]*1) + point[-1][1]\n",
-    "        \n",
-    "    point.append([x, y])\n",
-    "   \n",
+    "times = []\n",
     "\n",
+    "if len (peek) > 0:\n",
+    "    times.append(df_acc['t'][peek[0]]) \n",
+    "    for p in peek:\n",
+    "\n",
+    "        x = step * np.sin(df_gyro['low_angle'][p]*1) + point[-1][0]\n",
+    "        y = step * np.cos(df_gyro['low_angle'][p]*1) + point[-1][1]\n",
+    "            \n",
+    "        point.append([x, y])\n",
+    "        times.append(df_acc['t'][p])\n",
+    "\n",
+    "else:\n",
+    "    times.append(0.0) \n",
+    "    point.append([0, 0]) # 0秒の軌跡として原点を追加\n",
+    "    print(\"警告: ピークが検出されませんでした。初期位置 (0,0) と時刻 0.0 のみがプロットされます。\")\n",
+    "\n",
+    "    \n",
     "\n",
     "\n",
     "point = pd.DataFrame(data=point, columns=['x', 'y'])\n",
-    "\n",
-    "\n",
     "point['time'] = times\n",
+    "\n",
     "point['x'] = point['x'] - point['x'][0]\n",
     "point['y'] = point['y'] - point['y'][0]\n",
+    "\n",
+    "\n",
     "\n",
     "# 描画\n",
     "size = ((-1, 10), (-1, 10))\n",
@@ -412,55 +424,104 @@
    "id": "7e6339b3",
    "metadata": {},
    "source": [
-    "# 一定間隔の時刻リストのみを生成"
+    "# 新しい一定間隔の時刻データを生成"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "59229d00",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "--- 元の軌跡データ (先頭5行、時刻は不規則) ---\n",
-      "          x         y      time\n",
-      "0  0.000000  0.000000  7.230180\n",
-      "1 -0.050533  0.396795  7.230180\n",
-      "2 -0.066231  0.796487  7.761314\n",
-      "3  0.047081  1.180102  8.317105\n",
-      "4  0.056777  1.579985  8.870732\n",
-      "\n",
-      "--- 一定間隔で生成された時刻リスト (先頭10個) ---\n",
-      "[ 7.23018016  8.23018016  9.23018016 10.23018016 11.23018016 12.23018016\n",
-      " 13.23018016 14.23018016 15.23018016 16.23018016]\n",
-      "一定間隔の時刻リストの要素数: 15\n",
-      "元の軌跡データの要素数: 13\n"
+      "/opt/homebrew/lib/python3.11/site-packages/scipy/interpolate/_interpolate.py:479: RuntimeWarning: divide by zero encountered in divide\n",
+      "  slope = (y_hi - y_lo) / (x_hi - x_lo)[:, None]\n",
+      "/opt/homebrew/lib/python3.11/site-packages/scipy/interpolate/_interpolate.py:482: RuntimeWarning: invalid value encountered in multiply\n",
+      "  y_new = slope*(x_new - x_lo)[:, None] + y_lo\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'resampsled_times' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[43]\u001b[39m\u001b[32m, line 18\u001b[39m\n\u001b[32m     15\u001b[39m interp_y = interp1d(point[\u001b[33m'\u001b[39m\u001b[33mtime\u001b[39m\u001b[33m'\u001b[39m], point[\u001b[33m'\u001b[39m\u001b[33my\u001b[39m\u001b[33m'\u001b[39m], kind=\u001b[33m'\u001b[39m\u001b[33mlinear\u001b[39m\u001b[33m'\u001b[39m, fill_value=\u001b[33m\"\u001b[39m\u001b[33mextrapolate\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     17\u001b[39m resampled_x = interp_x(resampled_times)\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m resampled_y = interp_y(\u001b[43mresampsled_times\u001b[49m)\n\u001b[32m     20\u001b[39m \u001b[38;5;66;03m# 補間されたデータで新しいDataFrameを作成\u001b[39;00m\n\u001b[32m     21\u001b[39m \u001b[38;5;66;03m# このresampled_pointが、timesを一定間隔で同期した軌跡データです。\u001b[39;00m\n\u001b[32m     22\u001b[39m resampled_point = pd.DataFrame({\n\u001b[32m     23\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mtime\u001b[39m\u001b[33m'\u001b[39m: resampled_times,\n\u001b[32m     24\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mx\u001b[39m\u001b[33m'\u001b[39m: resampled_x,\n\u001b[32m     25\u001b[39m     \u001b[33m'\u001b[39m\u001b[33my\u001b[39m\u001b[33m'\u001b[39m: resampled_y\n\u001b[32m     26\u001b[39m })\n",
+      "\u001b[31mNameError\u001b[39m: name 'resampsled_times' is not defined"
      ]
     }
    ],
    "source": [
     "# サンプリング間隔の設定 (例: 0.01秒ごと)\n",
-    "sampling_interval = 1 # この値を調整してください\n",
+    "sampling_interval = 0.1 # この値を調整してください\n",
     "\n",
     "# ピーク時の軌跡の時刻データの最小値と最大値を取得\n",
     "min_time = point['time'].min()\n",
     "max_time = point['time'].max()\n",
     "\n",
     "# 新しい一定間隔の時刻データを生成\n",
-    "uniform_times = np.arange(min_time, max_time + sampling_interval, sampling_interval)\n",
+    "resampled_times = np.arange(min_time, max_time + sampling_interval, sampling_interval)\n",
     "\n",
-    "print(\"\\n--- 元の軌跡データ (先頭5行、時刻は不規則) ---\")\n",
-    "print(point.head())\n",
+    "# x, y 座標を新しい時刻に合わせてリサンプリング\n",
+    "# kind='linear' : 線形補間\n",
+    "# # fill_value=\"extrapolate\" : 元のデータの範囲外でも補間\n",
+    "interp_x = interp1d(point['time'], point['x'], kind='linear', fill_value=\"extrapolate\")\n",
+    "interp_y = interp1d(point['time'], point['y'], kind='linear', fill_value=\"extrapolate\")\n",
     "\n",
-    "print(\"\\n--- 一定間隔で生成された時刻リスト (先頭10個) ---\")\n",
-    "print(uniform_times[:10])\n",
-    "print(f\"一定間隔の時刻リストの要素数: {len(uniform_times)}\")\n",
-    "print(f\"元の軌跡データの要素数: {len(point)}\")\n"
+    "resampled_x = interp_x(resampled_times)\n",
+    "resampled_y = interp_y(resampled_times)\n",
+    "\n",
+    "# 補間されたデータで新しいDataFrameを作成\n",
+    "# このresampled_pointが、timesを一定間隔で同期した軌跡データです。\n",
+    "resampled_point = pd.DataFrame({\n",
+    "    'time': resampled_times,\n",
+    "    'x': resampled_x,\n",
+    "    'y': resampled_y\n",
+    "})\n",
+    "\n",
+    "print(\"\\n--- 補間後の軌跡データ (先頭5行) ---\")\n",
+    "print(resampled_point.head())\n",
+    "\n",
+    "print(f\"\\n補間後のデータ点数: {len(resampled_point)}\")\n",
+    "print(f\"補間後の時刻間隔: {resampled_point['time'].diff().mean():.6f} 秒 (平均)\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# --- 5. 描画 ---\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "\n",
+    "# 補間された軌跡を描画\n",
+    "plt.plot(resampled_point['x'], resampled_point['y'], '.-', label=f'推定軌跡 (補間, 間隔={sampling_interval}s)', zorder=1, alpha=0.8)\n",
+    "\n",
+    "# 元の不規則間隔の軌跡の点も重ねて表示（補間効果の確認用）\n",
+    "plt.plot(point['x'], point['y'], 'o', markersize=4, color='red', alpha=0.6, label='元のデータ点')\n",
+    "\n",
+    "# 原点を赤で描画\n",
+    "plt.plot(0, 0, 'ro', label='原点', zorder=2)\n",
+    "\n",
+    "# 軸を揃える\n",
+    "plt.gca().set_aspect('equal', adjustable='box')\n",
+    "\n",
+    "plt.title('歩行軌跡 (0.1秒間隔で時刻を同期)')\n",
+    "plt.xlabel('x [m]')\n",
+    "plt.ylabel('y [m]')\n",
+    "\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7aa34a7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -472,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "747b46ee",
    "metadata": {},
    "outputs": [
