--- a/0527.ipynb
+++ b/0527.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c5c6df30",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8ff74088",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "12d10d63",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0bed6dff",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a1a19b5d",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "25331d40",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "1027f53c",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3d60fcaa",
    "metadata": {},
    "outputs": [],
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1c1b1ffd",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f2d15c6d",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "59229d00",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
     }
    ],
    "source": [
-    "# サンプリング間隔の設定 (例: 0.01秒ごと)\n",
+    "# サンプリング間隔の設定\n",
     "sampling_interval = 0.25 # この値を調整してください\n",
     "\n",
     "\n",
@@ -544,6 +544,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d4f470a8",
+   "metadata": {},
+   "source": [
+    "## 余分なデータの削除"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f3d9403",
+   "metadata": {},
+   "source": [
+    "### x,y座標がinfの行を削除"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2178d24f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    # 'x' 列と 'y' 列が有限な値（inf, -inf, NaNではない）である行のみを保持\n",
+    "    finite_condition = np.isfinite(resampled_point['x']) & np.isfinite(resampled_point['y'])\n",
+    "    resampled_point = resampled_point[finite_condition].reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e1bf94b7",
    "metadata": {},
    "source": [
@@ -552,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "747b46ee",
    "metadata": {},
    "outputs": [
@@ -562,12 +590,12 @@
      "text": [
       "'0527walking_trajectory.csv' が正常に作成されました。\n",
       "DataFrameの内容 (最初の5行):\n",
-      "   time    x    y\n",
-      "0  0.00  inf -inf\n",
-      "1  0.25  inf -inf\n",
-      "2  0.50  inf -inf\n",
-      "3  0.75  inf -inf\n",
-      "4  1.00  inf -inf\n"
+      "   time         x         y\n",
+      "0  7.25 -0.051118  0.411710\n",
+      "1  7.50 -0.058507  0.599842\n",
+      "2  7.75 -0.065896  0.787973\n",
+      "3  8.00 -0.017568  0.961232\n",
+      "4  8.25  0.033400  1.133785\n"
      ]
     }
    ],
@@ -585,14 +613,6 @@
     "else:\n",
     "    print(\"保存する軌跡データがありません。\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dc1826d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
