--- a/src/speed/slowly.ipynb
+++ b/src/speed/slowly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8ff74088",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import japanize_matplotlib\n",
-    "imporTime (s)ime (s)ime (s)ime (s)ime (s) numpy as np\n",
+    "import numpy as np\n",
     "from scipy import signal\n",
     "from scipy.signal import find_peaks\n",
     "from scipy.interpolate import interp1d\n",
