--- a/src/speed/slowly/slowly.ipynb
+++ b/src/speed/slowly/slowly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8ff74088",
    "metadata": {},
    "outputs": [],
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "12d10d63",
    "metadata": {},
    "outputs": [],
    "source": [
-    "acc_file_path = \"../../data/speed/slowly/Accelerometer.csv\"\n",
-    "gyro_file_path = \"../../data/speed/slowly/Gyroscope.csv\"\n",
+    "acc_file_path = \"../../../data/speed/slowly/Accelerometer.csv\"\n",
+    "gyro_file_path = \"../../../data/speed/slowly/Gyroscope.csv\"\n",
     "\n",
     "# 通信してデータを取得\n",
     "df_acc = pd.read_csv(acc_file_path)\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "0bed6dff",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a1a19b5d",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "25331d40",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "1027f53c",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "3d60fcaa",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "1c1b1ffd",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "f2d15c6d",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0m/59kfg8d93117cwwrsg6slc_80000gn/T/ipykernel_55585/2850988961.py:47: UserWarning: Tight layout not applied. The left and right margins cannot be made large enough to accommodate all Axes decorations.\n",
+      "/var/folders/0m/59kfg8d93117cwwrsg6slc_80000gn/T/ipykernel_63525/2850988961.py:47: UserWarning: Tight layout not applied. The left and right margins cannot be made large enough to accommodate all Axes decorations.\n",
       "  plt.tight_layout()\n"
      ]
     },
@@ -399,10 +399,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "59229d00",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.11/site-packages/scipy/interpolate/_interpolate.py:479: RuntimeWarning: divide by zero encountered in divide\n",
+      "  slope = (y_hi - y_lo) / (x_hi - x_lo)[:, None]\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -426,14 +434,6 @@
       "\n",
       "補間後のデータ点数: 126\n",
       "補間後の時刻間隔: 0.250000 秒 (平均)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/lib/python3.11/site-packages/scipy/interpolate/_interpolate.py:479: RuntimeWarning: divide by zero encountered in divide\n",
-      "  slope = (y_hi - y_lo) / (x_hi - x_lo)[:, None]\n"
      ]
     },
     {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "2178d24f",
    "metadata": {},
    "outputs": [],
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "747b46ee",
    "metadata": {},
    "outputs": [
