--- a/src/speed/fastWalk/SpeedFastWalk.ipynb
+++ b/src/speed/fastWalk/SpeedFastWalk.ipynb
@@ -113,7 +113,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x10e9275d0>"
+       "<matplotlib.legend.Legend at 0x10cc5b7d0>"
       ]
      },
      "execution_count": 4,
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c446e731",
    "metadata": {},
    "outputs": [
@@ -203,10 +203,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x10efff010>"
+       "<matplotlib.legend.Legend at 0x10cfa0090>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
