--- a/src/speed/slowly/speedSlowly.ipynb
+++ b/src/speed/slowly/speedSlowly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "233671b0",
    "metadata": {},
    "outputs": [],
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "cd11755c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# CSVファイルを読み込み\n",
-    "df = pd.read_csv(\"slowly.csv\")\n",
+    "df = pd.read_csv(\"trajectorySlowly.csv\")\n",
     "\n",
     "# 必要な列があるか確認\n",
     "if not set(['time','x', 'y',]).issubset(df.columns):\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "56468c19",
    "metadata": {},
    "outputs": [
@@ -100,17 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "4888125e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x11631b510>"
+       "<matplotlib.legend.Legend at 0x10cda9f90>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "c8425a10",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "c446e731",
    "metadata": {},
    "outputs": [
@@ -192,10 +192,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x11639b350>"
+       "<matplotlib.legend.Legend at 0x10ce83810>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -212,7 +212,7 @@
    ],
    "source": [
     "# 出力ファイル名\n",
-    "output_csv = \"output_speed.csv\"\n",
+    "output_csv = \"speedSlowly.csv\"\n",
     "\n",
     "# CSV出力\n",
     "result_df.to_csv(output_csv, index=False)\n",
